# PBudget

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: account_view_panel.cpp.970D08C5E297C321.idx  account_view_panel.h.07C343B884679065.idx  app_controller.cpp.39077B5E4E1235F1.idx  app_controller.h.30C84CB1607E5CE5.idx  core_logic.cpp.EFC08840F256DE25.idx  core_logic.h.60930558AE7B06F3.idx  create_account_panel.cpp.83A3A510F2CD11B2.idx  create_account_panel.h.6935CBD8F0FBF2AB.idx  future_app_state.h.B6040D33940B3B38.idx  future_main.cpp.78C4EEEB7BA7A722.idx  helpers.cpp.0E9354AF4A261E99.idx  helpers.h.7493247005794EC4.idx  imconfig.h.C5EA6D07F2124A72.idx  imgui.cpp.B3062EE75D0B4B46.idx  imgui.h.775CD8270DC7AB5C.idx  imgui_demo.cpp.9839B81D6E187B72.idx  imgui_draw.cpp.EB46B784D495070E.idx  imgui_impl_glfw.cpp.B8CF00180C27B7F4.idx  imgui_impl_glfw.h.342E1C1E00F7B1E6.idx  imgui_impl_opengl3.cpp.C349AE4D87628147.idx  imgui_impl_opengl3.h.FDA057504C868A27.idx  (+24 more)
.github/workflows/: ci.yml
src/: app_controller.cpp  app_controller.h  core_logic.cpp  core_logic.h  future_app_state.h  future_main.cpp  helpers.cpp  helpers.h  storage.cpp  storage.h
src/UI/: account_view_panel.cpp  account_view_panel.h  create_account_panel.cpp  create_account_panel.h  latest_transactions_table.cpp  latest_transactions_table.h  modify_account_panel.cpp  modify_account_panel.h  right_panel.cpp  right_panel.h  sidebar_panel.cpp  sidebar_panel.h  transaction_form.cpp  transaction_form.h
tests/: app_controller_tests.cpp  core_logic_tests.cpp  helpers_tests.cpp  storage_tests.cpp
